--- a/.github/workflows/dogfood.yml
+++ b/.github/workflows/dogfood.yml
@@ -16,5 +16,5 @@ jobs:
         uses: ./
         with:
           merge-strategy: "squash"
-          prod-dep-semver-autoapprove: "patch"
-          github-token: "foobar"
+          prod-semver-autoapprovals: "patch"
+          github-token: ${{ github.token }}
