--- a/action.yml
+++ b/action.yml
@@ -19,6 +19,11 @@ inputs:
 runs:
   using: composite
   steps:
+    - uses: actions/setup-python@v4
+      with:
+        python-version: '3.11'
+    - shell: bash
+      run: pip install click
     - name: Dependabot metadata
       id: dependabot-metadata
       uses: dependabot/fetch-metadata@v1
