--- a/.github/workflows/dogfood.yml
+++ b/.github/workflows/dogfood.yml
@@ -12,4 +12,4 @@ jobs:
     if: ${{ github.actor == 'dependabot[bot]' }}
     steps:
       - name: Enable Dependabot automation
-        uses: mozilla/syseng-pod/actions/dependabot-automerge
+        uses: mozilla/syseng-pod/actions/dependabot-automerge@main
